# yast-mail-server

./: .cvsignore  MAINTAINER  README  yast2-mail-server.spec.in
agents/: Makefile  Makefile.am  Makefile.in  MasterCFParser.pm  ag_cyrus_conf  ag_mailconfig  ag_postfix_mastercf  cfg_fetchmail.scr  etc_imapd_conf.scr  etc_imapd_conf.src  mail_maincf.scr  mail_saslpasswd.scr
doc/autodocs/: MailServer.pm.html  Makefile  Makefile.am  Makefile.in  complex.html  dialogs.html  files.html  helps.html  index.html  intro.html  mail-server.html  mail-server_auto.html  mail-server_proposal.html  wizards.html
mail-server/: MAINTAINER  RPMNAME  yast2-mail-server.spec.in
mail-server/agents/: CyrusConfParser.pm  Makefile.am  MasterCFParser.pm  ag_mailconfig  mail_cyrusconf.scr  mail_ldaptable.scr  mail_maincf.scr  mail_mastercf.scr
mail-server/doc/autodocs/: Makefile.am
mail-server/package/: yast2-mail-server.changes
mail-server/src/: MailServer.ycp  SUSE-Mail.schema  complex.ycp  dialogs.ycp  helps.ycp  mail-server.desktop  mail-server_auto.ycp  suse-mailserver.schema
mail-server/src/YaPI/: MailServer.pm
mail-server/testsuite/: mail-servertest.ycp
mail-server/testsuite/config/: add_base  slapd.conf
mail-server/testsuite/tests/: MailServer.ycp
mail-server/users-plugin/: UsersPluginMail.pm  users_plugin_mail.ycp  users_plugin_mail_groups.ycp
package/: yast2-mail-server.changes
permissions/: Makefile  Makefile.am  Makefile.in
src/: MailServer.pm  MailServer.ybc  MailServer.ycp  Makefile.am  SUSE-Mail.schema  complex.ycp  dialogs.ycp  helps.ycp  mail-server.desktop  mail-server.ycp  mail-server_auto.ycp  mail-server_proposal.ycp  suse-mailserver.schema  wizards.ycp
src/YaPI/: MailServer.pm
testsuite/: MailServerTest.pm  Makefile  Makefile.in  site.exp  yast2-devtools.sum
testsuite/config/: ldap.base  unix.exp
testsuite/run/: runtest.sh
testsuite/tests/: MailServer.out
testsuite/yast2-devtools.test/: testsuite.exp
users-plugin/: Makefile.am  PluginMail.pm  UsersPluginMail.pm  UsersPluginMailGroups.pm  users_plugin_mail.ycp  users_plugin_mail_groups.ycp
