#
# Makefile.am for devtools/devtools/skeletons/config/agents
#

agent_SCRIPTS = ag_mailconfig ag_postfix_mastercf MasterCFParser.pm ag_mail_ldaptable

scrconf_DATA =  mail_maincf.scr mail_saslpasswd.scr mail_mastercf.scr etc_imapd_conf.scr mail_ldaptable.scr

EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA)
